catalog/video/video-admin-plugin/src/main/webapp/css/index.css
/**
 * Copyright (c) Codice Foundation
 *
 * This is free software: you can redistribute it and/or modify it under the terms of the GNU Lesser General Public License as published by the Free Software Foundation, either
 * version 3 of the License, or any later version.
 *
 * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 * See the GNU Lesser General Public License for more details. A copy of the GNU Lesser General Public License is distributed along with this program and can be found at
 * <http://www.gnu.org/licenses/lgpl.html>.
 *
 **/

.td-btn {
    border: 1px solid transparent;
    border-radius: 4px;
}

.td-i {
    padding: 5px;
}

.center {
    text-align: center;
}

.actionitem {
    width:50%;
    display:inline-block;
    margin-bottom:30px;
}

.inputtext {
    width:250px;
}

.inputnum {
    width:100px;
}

.deleteicon {
    color:#e74c3c;
}

.startTime {
    width:300px;
}

.multi {
    display:none;
}

.parentmulti .multi {
    display:inline-block;
}

